examples/test/testpolicy8869.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8869
  namespace: namespace95
spec:
  podSelector:
    matchLabels:
      key38: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value41
          key32: value1
      podSelector:
        matchLabels:
          key46: value42
          key3: value23
          key13: value25
